Changes to support windows with install service script

--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "scale",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "node-hid-stream": "^1.1.0",
-    "usb-detection": "^4.5.0",
-    "ws": "^7.2.0"
-  }
+    "name": "scale",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "dev": "node index.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "node-hid": "^2.1.1",
+        "node-windows": "^1.0.0-beta.8",
+        "usb-detection": "^4.5.0",
+        "ws": "^7.2.0"
+    }
 }
